--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 
 .back-ground-header{
-     background: linear-gradient(to bottom, #f9fff9 0%, #c8f8d0 70%, #f9fff9 100%);
+     background: linear-gradient(to bottom, #f9fff9 0%, #dcfbe1 70%, #f9fff9 100%);
+}
+.back-ground-contact{
+     background: linear-gradient(to bottom, #f9fff9 0%, #e2fee6 50%, #f9fff9 100%);
 }
 
