--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,124 @@
   font-variation-settings:"wdth" 100,
 "YTLC" 500;
 }
+
+
+.footer-whats{
+     background-image: url("/./src/assets/footerwhats.jpeg");
+     object-fit: cover;
+     
+
+
+}
+
+
+
+.whatsapp-icon {
+  position: absolute;
+  top: 0;
+  right: 80px;
+  
+  font-size: 1rem;
+  text-shadow: 0 0 10px #22c55e;
+  animation: float 2s ease-in-out infinite;
+}
+
+.finger-up{
+  position: absolute;
+  top: 230px;
+  left: 100px;
+  
+  font-size: 1rem;
+  text-shadow: 0 0 10px rgb(32, 106, 254);
+  animation: finger 2s ease-in-out infinite;
+}
+
+.heart-icon {
+  position: absolute;
+  top: 0;
+  left: 70px;
+  
+  font-size: 1rem;
+  text-shadow: 0 0 10px #ee3030;
+  animation: float 2s ease-in-out infinite;
+}
+
+
+@keyframes float {
+  0%, 100% {
+    transform: translateY(10px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
+@keyframes finger {
+  0%, 100% {
+    transform: translateY(-9px);
+  }
+  50% {
+    transform: translateY(9px);
+  }
+}
+
+
+
+.whatsapp-icon-shiking {
+  position: absolute;
+  top: 100px;
+  right: 100px;
+  color: #22c55e;
+  font-size: 3rem;
+  text-shadow: 0 0 15px #22c55e;
+  animation: spinShake 2s ease-in-out infinite;
+}
+
+
+@keyframes spinShake {
+  0% {
+    transform: rotate(0deg) translateX(0);
+  }
+  25% {
+    transform: rotate(10deg) translateX(3px);
+  }
+  50% {
+    transform: rotate(0deg) translateX(-3px);
+  }
+  75% {
+    transform: rotate(-10deg) translateX(3px);
+  }
+  100% {
+    transform: rotate(0deg) translateX(0);
+  }
+}
+
+
+.phone{
+  background-image: url("/src/assets/feedback/phone.png");
+  width: 700px;
+  height: 500px;
+  background-repeat: no-repeat;
+  padding: 500px;
+
+}
+
+
+@media (max-width: 768px) {
+  .phone {
+    width: 400px;
+    height: 300px;
+    padding: 200px;
+    background-size: contain;
+  }
+}
+
+/* لو عايزها أصغر كمان للموبايلات الصغيرة جداً */
+@media (max-width: 480px) {
+  .phone {
+    width: 200px;
+    height: 150px;
+    padding: 150px;
+    background-size: contain;
+  }
+}
