--- a/src/index.css
+++ b/src/index.css
@@ -229,3 +229,59 @@
 
   overflow: visible !important;
 }
+
+
+
+
+
+
+.container-3d {
+  position: relative;
+  perspective: 1000px;
+  width: 100%;
+  max-width: 900px;
+  margin: auto;
+}
+
+/* الوجهين */
+.front-side,
+.back-side {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  transition: transform 0.6s ease, opacity 0.6s ease;
+}
+
+
+.front-side {
+  transform: rotateY(0deg);
+  opacity: 1;
+}
+
+
+.back-side {
+  transform: rotateY(90deg); 
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.container-3d.flipped .front-side {
+  transform: rotateY(90deg);
+  opacity: 0;
+}
+
+.container-3d.flipped .back-side {
+  transform: rotateY(0deg);
+  opacity: 1;
+}
+
+
+
+
